change defalut AP Server to WildFly8.1.0